--- a/style.css
+++ b/style.css
@@ -88,6 +88,10 @@ header {
   cursor: pointer;
 }
 
+ .green {
+  background-color: rgb(44, 158, 34);
+}
+
 button[disabled] {
   cursor: default;
   background: #c0c7cf;
